<resources>
    <string name="app_name">Logim</string>
    <string name="app_id">562797540430726</string>
    <string name="app_slogan">Your Passwords, In Your Pocket</string>
    <string name="action_search">Search</string>
    <string name="action_scan">Scan</string>
    <string name="action_add">@string/title_activity_identity_form</string>
    <string name="action_settings">@string/title_activity_settings</string>
    <string name="action_showpwd">Show Password</string>
    <string name="action_webpage">In website</string>
    <string name="action_delete">Delete</string>
    <string name="action_again">Again</string>
    <string name="action_identity">Identities</string>
    <string name="button_accept">Accept</string>
    <string name="button_access">Access</string>
    <string name="button_activate">Activate</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="button_create">@string/title_activity_create_account</string>
    <string name="button_forgot">Forgot password?</string>
    <string name="button_forgot_mail">Send Reset Email</string>
    <string name="button_gotit">Got it!</string>
    <string name="button_more_identities">Get more identities!</string>
    <string name="button_policy">@string/title_activity_policy</string>
    <string name="button_post">Post</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_sign_in">@string/title_activity_sign_in</string>
    <string name="button_sign_out">@string/pref_title_sign_out</string>
    <string name="button_terms">@string/title_activity_term</string>
    <string name="button_video">Watch Video</string>
    <string name="dialog_blocked_text">This app has been blocked. Please visit http://mylogim.com/manage and log in with your account to unblock it.</string>
    <string name="dialog_destroy_text">This app has been selected for deletion from your account manage menu. Please sign in again to regain access.</string>
    <string name="dialog_eliminar">Delete Identity</string>
    <string name="dialog_eliminar_pregunta">Are you sure that you want to delete this identity?</string>
    <string name="dialog_order">Order by</string>
    <string name="dialog_processing">Processing &#8230;</string>
    <string name="dialog_restore_continue">Do you want to continue doing the restore?</string>
    <string name="dialog_restore_warning">The backup exceeds the limit of identities. All your data will be deleted.</string>
    <string name="dialog_pin_title">Input PIN</string>
    <string name="dialog_pin_hint">Please enter a 4-digit PIN</string>
    <string name="hint_actual_password">Actual Password</string>
    <string name="hint_confirm_password">Confirm the Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">@string/text_password</string>
    <string name="hint_code">Activation Code</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_send">Your text (max.140 characters)</string>
    <string name="option_delete_existing">Delete existing identities</string>
    <string name="option_mantener_existentes">Keep existing identities</string>
    <string name="option_name">Name</string>
    <string name="option_creation">Creation Date</string>
    <string name="option_last">Most Recently Used</string>
    <string name="option_often">Most Often Used</string>
    <string name="option_en">English</string>
    <string name="option_zh">Simplified Chinese</string>
    <string name="pref_category_account">Account</string>
    <string name="pref_category_storage">Storage</string>
    <string name="pref_category_startup">Startup</string>
    <string name="pref_category_about">About</string>
    <string name="pref_title_user">User</string>
    <string name="pref_title_type">Account Type</string>
    <string name="pref_title_expires">Expires On</string>
    <string name="pref_title_max">Storage Capacity</string>
    <string name="pref_title_change">Change Password</string>
    <string name="pref_title_invitation">Share With Friends</string>
    <string name="pref_title_last">Last Backup</string>
    <string name="pref_title_backup">Backup</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_pin">Require PIN</string>
    <string name="pref_title_scan">Scanner Upon Start</string>
    <string name="pref_title_tutorials">How Logim Works</string>
    <string name="pref_title_about">About Logim</string>
    <string name="pref_title_sign_out">Sign Out</string>
    <string name="pref_summary_invitation">Share Logim with your friends and get rewarded!</string>
    <string name="pref_summary_last">No Backup</string>
    <string name="pref_summary_backup">Your passwords are stored only on your phone. To switch device, backup your data and restore to the new device within 48 hours. We keep your backup only for 2 days.</string>
    <string name="pref_summary_restore">Restore backup data to this phone.</string>
    <string name="pref_summary_pin_on">PIN Used</string>
    <string name="pref_summary_pin_off">PIN Unused</string>
    <string name="text_about_version">Version 1.0</string>
    <string name="text_about_about">Logim secures your online identities on your phone, allowing you to log into your online accounts anywhere anytime using just your phone. No more password/username memorizing!</string>
	<string name="text_about_powered">Powered by Logim Solutions:</string>
	<string name="text_about_website">http://mylogim.com</string>
	<string name="text_about_email">info@mylogim.com</string>
	<string name="text_activation">Please, enter the activation code you had received by email</string>
    <string name="text_accept_terms">By creating an account, I accept the Terms of Service and Privacy Policy</string>
    <string name="text_change_password">For security reasons if you change the password, you will lose your data. Are you sure?</string>
    <string name="text_account">User/Email</string>
    <string name="text_name">Name</string>
    <string name="text_page1">So many passwords to remember?</string>
    <string name="text_page2">You can keep them save in your pocket</string>
    <string name="text_page3">Wherever you are, push passwords from your phone by a quick scan</string>
    <string name="text_page4">No need to memorize passwords!</string>
    <string name="text_password">Password</string>
    <string name="text_put_pin">Please, enter your Logim PIN</string>
    <string name="text_reset">A reset password link will be sent to your account email.Click the link in the email and you\'ll be directed to a webpage to reset your password.</string>
    <string name="text_send_email">Hey!\n- I\'m using an interesting app called Logim to manage my online credentials.It\'s more secure and quite different from other password managers. Maybe you can give it a try.\n- Best wishes</string>
    <string name="text_send_fbtwwb">I\'m using an interesting app called Logim to manage my online credentials. Check it out at http://www.mylogim.com</string>
    <string name="text_share_write_friend">Invite your friends! You can get 5 extra identities!</string>
    <string name="text_share_write_friend_no">Invite your friends! You already has got identities sending email</string>
    <string name="text_share_title_email">Share with friends</string>
    <string name="text_share_title_facebook">Facebook</string>
    <string name="text_share_title_twitter">Twitter</string>
    <string name="text_share_title_weibo">Weibo</string>
    <string name="text_share_summary_email">Share Logim with your friends by email</string>
    <string name="text_share_summary_facebook">Share with your friends what you like about Logim</string>
    <string name="text_share_summary_twitter">Tweet and spread the word about Logim!</string>
    <string name="text_share_summary_weibo">Tell your Weibo fans about Logim!</string>
    <string name="text_tutorials">Learn how to use your Logim passwords in any computer.</string>
    <string name="text_tutorials_camera_1">Logim Scanner works with a browser extension to connect your phone with computers</string>
    <string name="text_tutorials_camera_2">Visit \"mylogim.com/add\", and add Logim extension to your browser</string>
    <string name="text_tutorials_main_1">Here you can view and manage all your passwords</string>
    <string name="text_tutorials_main_2">You can use the scanner to save passwords while browsing Internet</string>
    <string name="text_url">URL</string>
    <string name="text_storage_infinity">∞</string>
    <string name="text_storage_1">Identities:</string>
    <string name="text_storage_2">/</string>
    <string name="text_warring">Warring</string>
    <string name="text_sign_out">When you sign out, all the information stored in the device is deleted, including passwords.\nGo to \'Do Backup\' in the settings menu if you want to save data before signing out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_identity_form">Add</string>
    <string name="title_activity_camera">Scanner</string>
    <string name="title_activity_identity_info">Identity</string>
    <string name="title_activity_title">PIN</string>
    <string name="title_activity_identity_edit">Edit</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_activation">Activation</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_initial">Logim</string>
    <string name="title_activity_forgot_password">Password Reset</string>
    <string name="title_activity_change_password">Change</string>
    <string name="title_activity_share_on_facebook">Facebook</string>
    <string name="title_activity_share_on_twitter">Twitter</string>
    <string name="title_activity_share_on_weibo">Weibo</string>
    <string name="title_activity_term">Terms of Service</string>
    <string name="title_activity_mail">Email</string>
    <string name="title_activity_social">Share</string>
    <string name="title_activity_tutorials">@string/pref_title_tutorials</string>
    <string name="title_activity_about">About Logim</string>
    <string name="title_activity_policy">Privacy Policy</string>
    <string name="toast_already_registered">User already registered</string>
    <string name="toast_already_used_email">You already have sent an email to this direction</string>
    <string name="toast_done">Done!</string>
    <string name="toast_exit">Press again to exit</string>
    <string name="toast_fault_email">Email field is empty</string>
    <string name="toast_fault_name">Name field is empty</string>
    <string name="toast_fault_Password_different">Password are not the same</string>
    <string name="toast_fault_password_empty">Password field is empty</string>
    <string name="toast_fault_password2_empty">Password Confirmation field is empty</string>
    <string name="toast_fault_password_length">The password must have a length of 6 characters</string>
    <string name="toast_fault_password_new">New password field is empty</string>
    <string name="toast_fault_password_old">Old password field is empty</string>
    <string name="toast_fault_password_origin">Old password is incorrect</string>
    <string name="toast_fault_password_user">Incorrect password or email</string>
    <string name="toast_fault_pin">PIN is incorrect</string>
    <string name="toast_fault_pin_4">PIN must have 4 digits</string>
    <string name="toast_fault_pin_empty">PIN field is empty</string>
    <string name="toast_fault_qr">This is not a Logim QR</string>
</resources>