<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="config_layout">
    <PreferenceCategory 
        android:title="@string/pref_category_account">
        <Preference
            android:key="config_user"
            android:title="@string/pref_title_user"/>
        <Preference
            android:key="config_type"
            android:title="@string/pref_title_type"/>
        <Preference
            android:key="config_expires"
            android:title="@string/pref_title_expires"/>
        <Preference
            android:key="config_max"
            android:title="@string/pref_title_max"/>
        <Preference
            android:key="config_change"
            android:title="@string/pref_title_change"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_category_storage">
        <Preference 
            android:key="config_invitation"
            android:title="@string/pref_title_invitation"
            android:summary="@string/pref_summary_invitation"/>
        <Preference
            android:key="config_last"
            android:title="@string/pref_title_last"
            android:summary="@string/pref_summary_last"/>
        <Preference
            android:key="config_backup"
            android:title="@string/pref_title_backup"
            android:summary="@string/pref_summary_backup"/>
        <Preference
            android:key="config_restore"
            android:title="@string/pref_title_restore"
            android:summary="@string/pref_summary_restore"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_category_startup">
        <ListPreference 
            android:key="config_language"
            android:title="@string/pref_title_language"
  	  		android:dialogTitle="@string/pref_title_language"
  	  		android:entries="@array/language"
  	  		android:entryValues="@array/language_value"
  	  		android:selectable="true"/>
        <CheckBoxPreference
            android:key="config_pin"
            android:title="@string/pref_title_pin"
            android:summaryOn="@string/pref_summary_pin_on"
            android:summaryOff="@string/pref_summary_pin_off"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="config_scan"
            android:title="@string/pref_title_scan"/>
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/pref_category_about">
        <Preference 
            android:key="config_tutorials"
            android:title="@string/pref_title_tutorials"/>
        <Preference 
            android:key="config_about"
            android:title="@string/pref_title_about"/>
    </PreferenceCategory>
</PreferenceScreen>
