<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewSettings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/layout_style">

        <EditText
            style="@style/edittext_style"
            android:id="@+id/send_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/send_text"
            android:layout_below="@+id/send_email"
            android:text="@string/text_send_email"
            android:hint="@string/hint_send"
            android:inputType="textMultiLine"/>

        <TextView
            style="@style/text_style_info"
            android:id="@+id/textSendMail"
            android:layout_below="@+id/send_text"
            android:text="@string/text_share_write_friend"/>

        <Button
            style="@style/button_grey_style"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dip"
            android:layout_below="@+id/textSendMail"
            android:layout_centerHorizontal="true"
            android:onClick="sendMail"
            android:text="@string/button_send" />
    </RelativeLayout>

</ScrollView>