<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewSettings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/layout_style">

        <EditText
            style="@style/edittext_style"
            android:id="@+id/antiguo_password"
            android:hint="@string/hint_actual_password"
            android:inputType="textPassword" />

        <EditText
            style="@style/edittext_style"
            android:id="@+id/change_password"
            android:layout_below="@id/antiguo_password"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword" />
        
        <EditText
            style="@style/edittext_style"
            android:id="@+id/retype_password"
            android:layout_below="@id/change_password"
            android:hint="@string/hint_retype_password"
            android:inputType="textPassword" />

        <TextView
            style="@style/text_style_info"
            android:id="@+id/textChange"
            android:layout_below="@id/retype_password"
            android:layout_centerHorizontal="true"
            android:text="@string/text_change_password"/>
		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dip"
            android:layout_below="@id/textChange"
            android:weightSum="10" >
            <Button
	            style="@style/button_hint_style"
	            android:layout_weight="6"
	            android:onClick="forgotPassword"
	            android:text="@string/button_forgot"/>
            
	        <Button
	            style="@style/button_grey_style"
	            android:layout_weight="4"
	            android:onClick="changePassword"
	            android:text="@string/button_change"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>