<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewActivation"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

   <RelativeLayout
        style="@style/layout_style"
        android:layout_marginTop="30dip">

        <ImageView
            android:id="@+id/ImgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logim" />

        <TextView
            style="@style/text_style_info"
            android:id="@+id/version"
            android:layout_below="@id/ImgLogo"
            android:text="@string/text_about_version"/>
		
        <TextView
            style="@style/text_style_info"
            android:id="@+id/about"
            android:layout_marginTop="10dip"
            android:layout_below="@id/version"
            android:text="@string/text_about_about"/>
        
        <TextView
            style="@style/text_style_info"
            android:id="@+id/website"
            android:layout_marginTop="10dip"
            android:layout_below="@id/about"
            android:text="@string/text_about_website"
            android:textStyle="italic"
            android:autoLink="web"
            android:linksClickable="true"/>
        
		<Button
	        style="@style/button_grey_style"
	        android:id="@+id/button_terms"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/website"
	        android:layout_centerHorizontal="true"
	        android:onClick="ShowTerms"
	        android:text="@string/button_terms"/>
	
	    <Button
	        style="@style/button_grey_style"
	        android:id="@+id/button_policy"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/button_terms"
	        android:layout_centerHorizontal="true"
	        android:onClick="ShowPolicy"
	        android:text="@string/button_policy"/>
	    			
        <TextView
            style="@style/text_style_info"
            android:id="@+id/power"
            android:layout_marginTop="15dip"
            android:layout_below="@id/button_policy"
            android:text="@string/text_about_powered"/>
        
        <TextView
            style="@style/text_style_info"
            android:layout_below="@id/power"
            android:text="@string/text_about_email"
            android:textStyle="italic"
            android:autoLink="email"
            android:linksClickable="true"/>
   </RelativeLayout>
</ScrollView>