<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewCreate"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/layout_style"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="34">

        <EditText
            style="@style/edittext_style"
            android:id="@+id/create_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/edittext_style"
            android:id="@+id/create_password"
            android:layout_below="@id/create_email"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBarCreate"
            android:layout_below="@id/create_password"
            android:layout_width="fill_parent"
            android:layout_height="7dip"
            android:layout_margin="15dip"
            android:background="@color/grey"
            android:progressDrawable="@color/transparent"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/confirm_password"
            android:layout_below="@id/progressBarCreate"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />
		
	        
	    <Button
	        style="@style/button_red_style"
	        android:id="@+id/buttonCreateAccount"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/confirm_password"
	        android:layout_centerHorizontal="true"
	        android:onClick="CreateAccount"
	        android:text="@string/button_create"/>
         
        <TextView
            style="@style/text_style_info"
            android:id="@+id/textAccount"
            android:layout_marginTop="50dip"
            android:layout_below="@id/buttonCreateAccount"
            android:text="@string/text_accept_terms"/>
			
	    <Button
	        style="@style/button_grey_style"
	        android:id="@+id/button_terms"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/textAccount"
	        android:layout_centerHorizontal="true"
	        android:onClick="ShowTerms"
	        android:text="@string/button_terms"/>
	
	    <Button
	        style="@style/button_grey_style"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/button_terms"
	        android:layout_centerHorizontal="true"
	        android:onClick="ShowPolicy"
	        android:text="@string/button_policy"/>
    </RelativeLayout>

</ScrollView>