<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewSign"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/layout_style">

        <EditText
            style="@style/edittext_style"
            android:id="@+id/signin_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/edittext_style"
            android:id="@+id/signin_password"
            android:layout_below="@id/signin_email"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
	
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dip"
            android:layout_below="@id/signin_password"
            android:weightSum="10" >

	        <Button
	            style="@style/button_hint_style"
	            android:layout_weight="6"
	            android:onClick="forgotPassword"
	            android:text="@string/button_forgot"/>
	        
	        <Button
	            style="@style/button_red_style"
	            android:layout_weight="4"
	            android:onClick="Sign_In"
	            android:text="@string/button_sign_in"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>