<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewForgot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >


    <RelativeLayout
        style="@style/layout_style">
        
        <TextView
            style="@style/text_style_info"
            android:id="@+id/textReset"
            android:text="@string/text_reset"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/forgot_email"
            android:layout_below="@id/textReset"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

         <Button
            style="@style/button_grey_style"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dip"
            android:layout_below="@id/forgot_email"
            android:layout_centerHorizontal="true"
            android:onClick="recordarPassword"
            android:text="@string/button_forgot_mail"/>
         
     </RelativeLayout>

</ScrollView>