<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewForm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/layout_style"
        android:orientation="vertical"
        android:focusable="true"  
        android:focusableInTouchMode="true">

        <TextView
           	style="@style/text_style"
            android:id="@+id/name"
            android:text="@string/text_name"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/edit_message"
            android:layout_below="@+id/name"/>

        <TextView
            style="@style/text_style"
            android:id="@+id/email"
            android:layout_below="@id/edit_message"
            android:text="@string/text_account"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/edit_email"
            android:layout_below="@id/email"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/text_style"
            android:id="@+id/password"
            android:layout_below="@id/edit_email"
            android:text="@string/text_password"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/edit_password"
            android:layout_below="@id/password"
            android:inputType="textPassword" />
		
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBar1"
            android:layout_below="@id/edit_password"
            android:layout_width="fill_parent"
            android:layout_height="7dip"
            android:layout_margin="15dip"
            android:background="@color/grey"
            android:progressDrawable="@color/transparent"
            android:visibility="gone"/>

        <TextView
            style="@style/text_style"
            android:id="@+id/urlView"
            android:layout_below="@id/progressBar1"
            android:text="@string/text_url"/>

        <EditText
            style="@style/edittext_style"
            android:id="@+id/edit_url"
            android:layout_below="@id/urlView"
            android:inputType="textUri" />

        <Button
            style="@style/button_grey_style"
            android:layout_below="@id/edit_url"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="passParameters"
            android:text="@string/button_save"/>
    </RelativeLayout>

</ScrollView>