<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewForgot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
	<RelativeLayout 
	    style="@style/layout_style" >
	    	<TextView
	            style="@style/text_style_info"
	            android:id="@+id/textTutorials"
	            android:text="@string/text_tutorials"/>
	    	
	     	<ImageView 
	     	    android:id="@+id/image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/textTutorials"
		        android:layout_centerHorizontal="true"
		        android:scaleType="centerInside"
		        android:src="@drawable/synclogim"/>
	     	
	    	<Button
		        style="@style/button_red_style"
		        android:id="@+id/button_video"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="30dip"
		        android:layout_below="@id/image"
		        android:layout_centerHorizontal="true"
		        android:onClick="toVideo"
		        android:text="@string/button_video"/>
		
		    <Button
		        style="@style/button_grey_style"
		        android:layout_width="wrap_content"
		        android:layout_below="@id/button_video"
		        android:layout_centerHorizontal="true"
		        android:onClick="toMain"
		        android:text="@string/button_gotit"/>
	
	</RelativeLayout>
</ScrollView>
